test/test_templates/should_pass/input_output.jst

- cmd: hostname
  input: file.txt

- cmd: echo make file
  output: file.txt

- cmd: echo yay
