test/test_templates/should_fail/no_matching_output.jst

- cmd: hostname
  stdout: /dev/null
  input: file.txt
